tests/error/returnfuncNone.sk
int main() {
    return 0;
}

img next()
{
    img x = load("test_fish.png");

}
